--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,6 @@ name = "test-cmdstanpy"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
+    "arviz>=0.23.1",
     "cmdstanpy>=1.3.0",
 ]
